--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
-    "react-linechart": "^1.1.12",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
