--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "sweetalert2": "^11.3.0",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
