--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "sweetalert2": "^11.3.0",
-    "validator": "^13.7.0"
+    "sweetalert2": "^11.4.33",
+    "validator": "^13.7.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
