--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.4.33",
