--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.3.0",
     "validator": "^13.7.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.5.23"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
