--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material/textfield": "^14.0.0",
     "@react-google-maps/api": "^2.12.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -12,12 +11,13 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
-    "sweetalert": "^2.1.2",
+    "web-vitals": "^2.1.4",
     "sweetalert2": "^11.3.0",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23"
   },
   "scripts": {
     "start": "react-scripts start",
