--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
-    "sweetalert2": "^11.4.33",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.3.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
