--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.3.0",
     "validator": "^13.7.0",
